# M9123-01.04.02pmi_ArceIsmael

./: .gitignore  README.md  evaluate_ontology_llm.py  evaluate_treatment_extraction.py  main.py  pyproject.toml  КР70.json
examples/: simple_RAG.ipynb
utils/: handlers.py  llm_client.py  ontology_evaluator.py  pdf_processor.py  prompts.py
