[project]
name = "pdf-extractor-system"
version = "0.1.0"
description = "Academic-grade medical text extraction evaluation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "typer",
    "requests",
    "openai",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-community",
    "langchain-core",
    # Academic-grade NLP and semantic analysis
    "sentence-transformers>=2.2.0", # Semantic similarity with BERT/MPNet
    "transformers>=4.30.0", # Multilingual BERT for Russian text
    "torch>=2.0.0", # PyTorch backend
    "spacy>=3.6.0", # Advanced NLP with Russian support
    "nltk>=3.8.0", # Natural language processing
    "pymorphy3 @ git+https://github.com/no-plagiarism/pymorphy3.git", # Russian morphological analysis and lemmatization (modern maintained version)
    # Statistical analysis and evaluation
    "scikit-learn>=1.3.0", # Robust ML metrics and statistical tests
    "scipy>=1.11.0", # Statistical significance testing
    "statsmodels>=0.14.0", # Advanced statistical modeling
    "evaluate>=0.4.0", # Hugging Face evaluation library
    "seqeval>=1.2.0", # Sequence evaluation metrics
    # Text similarity and NLP metrics
    "sacrebleu>=2.3.0", # BLEU score for translation-like tasks
    # Confidence intervals and bootstrap
    "pingouin>=0.5.0", # Statistical functions with effect sizes
    # Performance and progress tracking
    "tqdm>=4.65.0", # Progress bars for long computations
    "pypdf>=5.6.0",
]
